[package]
name = "session_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
bson = { version = "2.11.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
mongodb = "3.0.1"
serde = { version = "1.0.208", features = ["derive"] }
tokio = "1.39.3"
rand = "0.8.5"
anyhow = "1.0.86"
